--- a/packages/ordersv2/webapp/manifest.json
+++ b/packages/ordersv2/webapp/manifest.json
@@ -98,8 +98,9 @@
             "css": []
         },
         "resourceRoots": {
-          "thirdparty.customControl.excelUpload": "./thirdparty/customControl/excelUpload/",
-          "xlsx": "./thirdparty/customControl/excelUpload/resources/xlsx"
+            "thirdparty.customControl.excelUpload": "./thirdparty/customControl/excelUpload/",
+            "xlsx": "./thirdparty/customControl/excelUpload/resources/xlsx",
+            "cc.excelUpload": "./thirdparty/customControl/excelUpload/"
         },
         "routing": {
             "config": {},
