--- a/packages/orders/webapp/manifest.json
+++ b/packages/orders/webapp/manifest.json
@@ -93,8 +93,9 @@
             "css": []
         },
         "resourceRoots": {
-          "thirdparty.customControl.excelUpload": "./thirdparty/customControl/excelUpload/",
-          "xlsx": "./thirdparty/customControl/excelUpload/resources/xlsx"
+            "thirdparty.customControl.excelUpload": "./thirdparty/customControl/excelUpload/",
+            "xlsx": "./thirdparty/customControl/excelUpload/resources/xlsx",
+            "cc.excelUpload": "./thirdparty/customControl/excelUpload/"
         },
         "routing": {
             "routes": [
