--- a/packages/ordersv2/package.json
+++ b/packages/ordersv2/package.json
@@ -9,18 +9,19 @@
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {},
+  "dependencies": {
+    "ui5-cc-excelupload": "0.3.1"
+  },
   "devDependencies": {
     "@ui5/cli": "^2.14.1",
     "@sap/ux-ui5-tooling": "1",
     "@sap/ux-specification": "UI5-1.108",
-    "@sap-ux/ui5-middleware-fe-mockserver": "2",
-    "ui5-cc-excelupload":"0.2.2"
+    "@sap-ux/ui5-middleware-fe-mockserver": "2"
   },
   "scripts": {
     "start": "fiori run -p 8081 --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#uiv2ordersv2-tile\"",
     "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#uiv2ordersv2-tile\"",
-    "build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
+    "build": "ui5 build --config=ui5.yaml -all --clean-dest --dest dist",
     "deploy": "fiori verify",
     "deploy-config": "fiori add deploy-config",
     "start-noflp": "fiori run --open \"index.html?sap-ui-xx-viewCache=false\"",
