feat: init load on List Report

--- a/packages/orders/webapp/manifest.json
+++ b/packages/orders/webapp/manifest.json
@@ -130,7 +130,8 @@
                                         "route": "OrdersObjectPage"
                                     }
                                 }
-                            }
+                            },
+                            "initialLoad": "Enabled"
                         }
                     }
                 },
