--- a/packages/ordersv2/webapp/manifest.json
+++ b/packages/ordersv2/webapp/manifest.json
@@ -155,6 +155,9 @@
                             "dateSettings": {
                                 "useDateRange": true
                             }
+                        },
+                        "dataLoadSettings": {
+                            "loadDataOnAppLaunch": "always"
                         }
                     }
                 },
