--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "testv4": "wdio run ./test/wdioV4.conf.js",
     "link": "run-p link:orders link:ordersv2",
     "link:orders": "cd ./packages/orders/ && npm run link",
-    "link:ordersv2": "cd ./packages/ordersv2/ && npm run link",
+    "link:ordersv2": "cd ./packages/ordersv2/ && npm run link"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
