--- a/package.json
+++ b/package.json
@@ -29,12 +29,21 @@
     "hooks:pre-push": "npm-run-all --sequential lint:commit",
     "ncu": "for d in ./packages/*/ ; do (cd \"$d\" && ncu); done",
     "ncu-u": "for d in ./packages/*/ ; do (cd \"$d\" && ncu -u); done",
-    "wdi5": "pnpm --filter @local/ui wdi5"
+    "testv2": "wdio run ./test/wdioV2.conf.js",
+    "testv4": "wdio run ./test/wdioV4.conf.js",
+    "link": "run-p link:orders link:ordersv2",
+    "link:orders": "cd ./packages/orders/ && npm link ui5-cc-excelupload",
+    "link:ordersv2": "cd ./packages/ordersv2/ && npm link ui5-cc-excelupload"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@prettier/plugin-xml": "^2.2.0",
+    "@wdio/cli": "^7.27.0",
+    "@wdio/local-runner": "^7.27.0",
+    "@wdio/mocha-framework": "^7.26.0",
+    "@wdio/spec-reporter": "^7.26.0",
+    "chromedriver": "^108.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.24.0",
     "husky": "^8.0.1",
@@ -43,6 +52,8 @@
     "prettier": "^2.7.1",
     "prettier-plugin-properties": "^0.2.0",
     "pretty-quick": "^3.1.3",
-    "wait-on": "^6.0.1"
+    "wait-on": "^6.0.1",
+    "wdio-chromedriver-service": "^7.3.2",
+    "wdio-ui5-service": "^1.0.2"
   }
 }
